Release Syscat 0.4.0 with photo captions
