# internal/catalog/api.go
@@ -20,6 +20,7 @@ var openAPISpec []byte
 
 type apiPhoto struct {
 	Name         string `json:"original_name"`
+	Caption      string `json:"caption"`
 	Role         string `json:"role"`
 	OriginalURL  string `json:"original_url"`
 	ThumbnailURL string `json:"thumbnail_url"`
@@ -68,7 +69,7 @@ func asAPIAsset(c Asset) apiAsset {
 		if i == 0 {
 			role = "overview"
 		}
-		photos[i] = apiPhoto{photo.Name, role, "/" + photo.Path, "/" + photo.Thumbnail}
+		photos[i] = apiPhoto{Name: photo.Name, Caption: photo.Caption, Role: role, OriginalURL: "/" + photo.Path, ThumbnailURL: "/" + photo.Thumbnail}
 	}
 	return apiAsset{
 		ID: c.ID, Label: c.Label(), Title: strings.TrimSpace(c.Title()),
